syntax = "proto3";
import "akkaserverless/annotations.proto";
package stockupdate.domain;

option (akkaserverless.file).event_sourced_entity = {
    name: "StockUpdate"
    entity_type: "stock"
    state: "WarehouseStock"
    events: "StockAggregated"
};

message StockAggregated {
    Stock stock = 1;
}
message Stock {
    string StoreUid = 1;
    int32 Stocklevel = 2;
}
message WarehouseStock {
    repeated Stock stocks = 1;
}

